--- a/src/components/psk-label/psk-label.css
+++ b/src/components/psk-label/psk-label.css
@@ -102,7 +102,7 @@ psk-modal psk-condition {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    height: 100%;
+    height: auto;
     width: 100%;
 }
 
